# Satellite-Doppler-Shift-Calculator

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  logging_config.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: auth.py  main.py  middleware.py  rate_limit.py
api/routes/: doppler.py  ground_stations.py  satellites.py  websocket.py
cli/: main.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 001_initial.py
doppler_core/: __init__.py  doppler.py  exceptions.py  models.py  propagator.py
services/: cache.py  tle_fetcher.py  tle_updater.py
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_doppler.py  test_propagator.py  test_tle_fetcher.py  test_websocket.py
tests/fixtures/: iss.tle
